tests/ui/panic-handler/panic-handler-wrong-location.stderr
error: `#[panic_handler]` must be used on a function
  --> $DIR/panic-handler-wrong-location.rs:6:1
   |
LL | #[panic_handler]
   | ^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

